--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,26 @@
 {
   "manifest_version": 3,
-  "name": "POST Response Viewer",
+  "name": "Messaging Example",
   "version": "1.0",
+  "background": {
+    "service_worker": "background.js"
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js"]
+    }
+  ],
   "permissions": [
     "webRequest",
     "storage",
     "activeTab",
-    "scripting"
+    "scripting",
+    "tabs",
+	"notifications"
+	
   ],
   "host_permissions": [
-    "http://*/*",
-    "https://*/*"
-  ],
-  "background": {
-    "service_worker": "background.js"
-  },
-  "action": {
-    "default_popup": "popup/popup.html",
-    "default_title": "View POST Response"
-  }
+    "<all_urls>"
+  ]
 }
